--- a/demo/demo.vcxproj
+++ b/demo/demo.vcxproj
@@ -72,23 +72,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)</OutDir>
-    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid</IntDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)</OutDir>
-    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid</IntDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)</OutDir>
-    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid</IntDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)</OutDir>
-    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid</IntDir>
+    <OutDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)\bin\$(Configuration)\$(Platform)\mid\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -155,12 +155,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="include\nsga2.h" />
+    <ClInclude Include="include\ZDT1.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GA.cpp" />
+    <ClCompile Include="..\common\nsga2.h" />
     <ClCompile Include="source\main.cpp" />
-    <ClCompile Include="source\nsga2.cpp" />
+    <ClCompile Include="source\ZDT1.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
