--- a/demo/demo.vcxproj.filters
+++ b/demo/demo.vcxproj.filters
@@ -15,19 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\nsga2.h">
+    <ClInclude Include="include\ZDT1.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\nsga2.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="GA.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="source\main.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\ZDT1.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\common\nsga2.h">
+      <Filter>头文件</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
